<resources>
    <string name="app_name">Slagalica</string>
    <string name="login_title">Prijava</string>
    <string name="register_title">Registracija</string>
    <string name="reset_password_title">Reset lozinke</string>
    <string name="home_title">Glavni meni</string>
    <string name="step_by_step_title">Korak po korak</string>
    <string name="my_number_title">Moj broj</string>
    <string name="email_or_username">Email ili korisnicko ime</string>
    <string name="email">Email</string>
    <string name="username">Korisnicko ime</string>
    <string name="region">Region</string>
    <string name="password">Lozinka</string>
    <string name="repeat_password">Ponovljena lozinka</string>
    <string name="old_password">Stara lozinka</string>
    <string name="new_password">Nova lozinka</string>
    <string name="repeat_new_password">Ponovljena nova lozinka</string>
    <string name="login">Prijavi se</string>
    <string name="challenges_title">Regionalni izazovi</string>
    <string name="challenge_create">Postavi izazov</string>
    <string name="challenge_join">Prihvati izazov</string>
    <string name="challenge_star_stake">Ulog zvezda (0-10)</string>
    <string name="challenge_token_stake">Ulog tokena (0-2)</string>
    <string name="play_as_guest">Igraj bez registracije</string>
    <string name="register">Registruj se</string>
    <string name="reset_password">Reset lozinke</string>
    <string name="confirm">Potvrdi</string>
    <string name="back_to_login">Nazad na prijavu</string>
    <string name="back">Nazad</string>
    <string name="start">Pokreni</string>
    <string name="logout">Odjavi se</string>
    <string name="empty_fields">Popunite sva polja.</string>
    <string name="passwords_do_not_match">Lozinke se ne poklapaju.</string>
    <string name="confirmation_sent">Link za potvrdu je poslat.</string>
    <string name="round">Runda</string>
    <string name="player_turn">Na potezu</string>
    <string name="timer">Timer</string>
    <string name="points">Bodovi</string>
    <string name="answer_hint">Unesite odgovor</string>
    <string name="confirm_answer">Potvrdi odgovor</string>
    <string name="next_step">Sledeci korak</string>
    <string name="round_result">Rezultat runde</string>
    <string name="association_round_score">Prva asocijacija je zavrsena.\nIgrac 1: %1$d bodova\nIgrac 2: %2$d bodova\n\nDruga asocijacija uskoro pocinje.</string>
    <string name="target_number">Trazeni broj</string>
    <string name="offered_numbers">Ponudjeni brojevi</string>
    <string name="stop_target">STOP trazeni broj</string>
    <string name="stop_numbers">STOP brojevi</string>
    <string name="expression">Izraz</string>
    <string name="clear">Obrisi</string>
    <string name="ok">U redu</string>
    <string name="register_link">Nemate nalog? Registrujte se</string>
    <string name="confirmation_note">Otvorite link koji je poslat na vas email, zatim se vratite u aplikaciju i proverite verifikaciju.</string>
    <string name="kt1_home_note">KT1 GUI prototip za funkcionalnosti Studenta 1.</string>
    <string name="available_screens">Dostupni ekrani</string>
    <string name="profile_title">Profil korisnika</string>
    <string name="statistics_title">Statistika igraca</string>
    <string name="change_avatar">Promeni avatar</string>
    <string name="friend_qr">QR kod za poziv prijatelja</string>
    <string name="profile_avatar">Avatar korisnika</string>
    <string name="qr_generation_error">QR kod nije moguce generisati.</string>
    <string name="quiz_title">Ko zna zna</string>
    <string name="next_question">Sledece pitanje</string>
    <string name="choose_answer">Izaberite odgovor.</string>
    <string name="connections_title">Spojnice</string>
    <string name="connections_round_header">Runda 1/2 | Na potezu: Igrac 1</string>
    <string name="connections_timer">Timer: 00:30</string>
    <string name="connect">Povezi</string>
    <string name="connected_pairs">Povezani parovi</string>
    <string name="no_pairs">Nema povezanih parova.</string>
    <string name="choose_terms">Izaberite pojam iz obe kolone.</string>
    <string name="incorrect_pair">Netacan par. Prelazi se na sledeci pojam.</string>
    <string name="round_one_two">Runda 1/2</string>
    <string name="player_one_turn">Na potezu: Igrac 1</string>
    <string name="step_timer_value">Timer: 00:10 po koraku</string>
    <string name="my_number_header">Runda 1/2 | Na potezu: Igrac 1</string>
    <string name="my_number_timer_value">Timer: 01:00</string>
    <string name="mock_points_zero">Mock bodovi: 0</string>
    <string name="target_placeholder">---</string>
    <string name="numbers_placeholder">-- -- -- -- -- --</string>
    <string name="empty_expression">Izraz jos nije unet.</string>
    <string name="associations_title">Asocijacije</string>
    <string name="skocko_title">Skocko</string>
    <string name="notifications_title">Notifikacije</string>
    <string name="association_answer_hint">Resenje kolone</string>
    <string name="check_column">Proveri kolonu</string>
    <string name="check_final">Proveri konacno</string>
    <string name="final_solution">Konacno resenje</string>
    <string name="final_solution_hint">Unesite konacno resenje</string>
    <string name="solved_columns">Resene kolone</string>
    <string name="no_solved_columns">Nema resenih kolona.</string>
    <string name="incorrect_answer">Netacan odgovor.</string>
    <string name="column_already_solved">Kolona je vec resena.</string>
    <string name="current_guess">Trenutna kombinacija</string>
    <string name="confirm_attempt">Potvrdi pokusaj</string>
    <string name="choose_four_symbols">Izaberite 4 znaka.</string>
    <string name="attempt_history">Istorija pokusaja</string>
    <string name="all_notifications">Sve</string>
    <string name="unread_notifications">Neprocitane</string>
    <string name="read_notifications">Procitane</string>
    <string name="notification_channels_title">Kanali notifikacija</string>
    <string name="notification_marked_read">Notifikacija je oznacena kao procitana.</string>
    <string name="no_notifications">Nema notifikacija za izabrani filter.</string>
    <string name="required_field">Ovo polje je obavezno.</string>
    <string name="invalid_email">Unesite ispravnu email adresu.</string>
    <string name="invalid_username">Korisnicko ime mora imati 3-20 slova, brojeva ili znakova . _ -</string>
    <string name="weak_password">Lozinka mora imati najmanje 8 karaktera, jedno slovo i jedan broj.</string>
    <string name="login_error_title">Prijava nije uspela</string>
    <string name="registration_error_title">Registracija nije uspela</string>
    <string name="verification_error_title">Verifikacija nije uspela</string>
    <string name="password_error_title">Promena lozinke nije uspela</string>
    <string name="check_verification">Proveri verifikaciju</string>
    <string name="resend_verification">Posalji email ponovo</string>
    <string name="verification_pending_or_sent">Email nije potvrdjen ili je novi link upravo poslat.</string>
    <string name="forgot_password_description">Unesite email adresu. Poslacemo vam bezbedan link za postavljanje nove lozinke.</string>
    <string name="change_password_description">Potvrdite identitet starom lozinkom, zatim unesite novu lozinku dva puta.</string>
    <string name="send_reset_link">Posalji link za reset</string>
    <string name="change_password">Promeni lozinku</string>
    <string name="reset_email_sent">Link za reset lozinke je poslat na email.</string>
    <string name="password_changed">Lozinka je uspesno promenjena.</string>
    <string name="round_value">Runda %1$d/%2$d</string>
    <string name="player_turn_value">Na potezu: Igrac %1$d</string>
    <string name="steal_turn_value">Protivnicka sansa: Igrac %1$d</string>
    <string name="possible_points">Moguci bodovi: %1$d</string>
    <string name="score_zero">Igrac 1: 0 | Igrac 2: 0</string>
    <string name="two_player_score">Igrac 1: %1$d | Igrac 2: %2$d</string>
    <string name="numbered_hint">%1$d. %2$s</string>
    <string name="hidden_hint">%1$d. Sakriven korak</string>
    <string name="correct_answer_title">Tacan odgovor</string>
    <string name="step_points_awarded">Igrac %1$d osvaja %2$d bodova.</string>
    <string name="step_steal_started">Vreme je isteklo. Protivnik ima 10 sekundi za 5 bodova.</string>
    <string name="step_round_unsolved">Niko nije pogodio. Tacno resenje je: %1$s</string>
    <string name="game_result">Rezultat igre</string>
    <string name="draw_result">Rezultat je neresen.</string>
    <string name="player_wins">Pobednik je Igrac %1$d.</string>
    <string name="auto_stop_value">Automatski STOP za %1$d s</string>
    <string name="shake_ready">Protresite uredjaj za STOP.</string>
    <string name="shake_unavailable">Akcelerometar nije dostupan; koristite STOP dugme.</string>
    <string name="shake_detected">Shake je detektovan.</string>
    <string name="invalid_expression_title">Neispravan izraz</string>
    <string name="invalid_expression_sequence">Ovaj znak ne moze da stoji na tom mestu.</string>
    <string name="player_result_title">Rezultat igraca %1$d</string>
    <string name="no_answer">bez odgovora</string>
    <string name="my_number_header_value">Runda %1$d/2 | Unosi Igrac %2$d | Rundu zapoceo Igrac %3$d</string>
    <string name="my_number_round_summary">Igrac 1: %1$s\nIgrac 2: %2$s\nUkupni bodovi: %3$d - %4$d</string>
    <string name="match_lobby_title">Partija preko dva telefona</string>
    <string name="match_lobby_description">Napravite partiju i podelite kod sa drugim igracem, ili unesite postojeci kod.</string>
    <string name="create_match">Napravi partiju</string>
    <string name="find_random_match">Pronadji nasumicnog protivnika</string>
    <string name="join_match">Pridruzi se partiji</string>
    <string name="match_code_hint">Kod partije, npr. A7K9P2</string>
    <string name="no_active_match">Nema aktivne partije</string>
    <string name="create_or_join_match">Napravite novu partiju ili unesite kod.</string>
    <string name="waiting_for_match">Igraci jos nisu povezani.</string>
    <string name="match_code_value">Kod partije: %1$s</string>
    <string name="match_ready">Oba igraca su povezana.</string>
    <string name="waiting_for_second_player">Ceka se drugi igrac.</string>
    <string name="waiting_player">Ceka se igrac...</string>
    <string name="match_players_value">Igrac 1: %1$s\nIgrac 2: %2$s</string>
    <string name="match_score_empty">Ukupni rezultat: 0 - 0</string>
    <string name="match_total_score">Ukupno: %1$s %2$d - %4$d %3$s\nOdigrane igre: %5$d/%6$d</string>
    <string name="final_match_result_title">Konacan rezultat partije</string>
    <string name="final_match_score">%1$s: %2$d\n%3$s: %4$d\n\n%5$s</string>
    <string name="final_match_rewards">\n\n%1$s: zvezde %2$+d, tokeni +%3$d\n%4$s: zvezde %5$+d, tokeni +%6$d</string>
    <string name="start_quiz_match">Pokreni Ko zna zna</string>
    <string name="start_connections_match">Pokreni Spojnice</string>
    <string name="start_step_by_step_match">Pokreni Korak po korak</string>
    <string name="start_my_number_match">Pokreni Moj broj</string>
    <string name="start_associations_match">Pokreni Asocijacije</string>
    <string name="start_skocko_match">Pokreni Skocka</string>
    <string name="friends_title">Prijatelji</string>
    <string name="search_friend_hint">Korisnicko ime prijatelja</string>
    <string name="search">Pretrazi</string>
    <string name="scan_qr">Skeniraj QR</string>
    <string name="incoming_friend_requests">Primljeni zahtevi</string>
    <string name="outgoing_friend_requests">Poslati zahtevi</string>
    <string name="friends_list">Lista prijatelja</string>
    <string name="incoming_match_invites">Primljeni pozivi za partiju</string>
    <string name="outgoing_match_invites">Poslati pozivi za partiju</string>
</resources>